Styled the main elements of the app

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app"></div>
+      <div class="weather-app">
       <div class="row">
         <div class="col-md-6">
           <h1>Amsterdam</h1>
@@ -34,11 +34,11 @@
           12°C | °F
         </div>
       </div>
-      </div>
       <small>
         <a href="https://github.com/sonysp13/vanilla-weather-app" target="_blank">
           Open-source code</a> by Kateryna Dubova
       </small>
+    </div>
     </div>
     <script src="src/app.js"></script>
   </body>
