Added relevant icon from the API

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <div class="col-md-6">
             <div class="d-flex weather-temperature">
               <img
-                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/scattered-clouds-day.png"
-                alt="Cloudy" id="icon"
+                src=""
+                alt="" id="icon"
               />
               <div>
               <strong id="temperature"></strong><span class="units">°C | <a href="#">°F</a></span>
