Added the search engine

--- a/index.html
+++ b/index.html
@@ -16,9 +16,25 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
+          <form id="search-form" class="mb-3">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Search city"
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input type="submit" value="Search" class="btn btn-primary w-100" />
+              </div>
+            </div>
+          </form>
           <div class="row">
             <div class="col-md-6">
-                <h1 id="city"></h1>
+              <h1 id="city"></h1>
               <ul>
                 <li>Last updated: <span id="date"></span></li>
                 <li id="description"></li>
@@ -29,15 +45,13 @@
               </ul>
             </div>
             <div class="col-md-6">
-            <div class="d-flex weather-temperature">
-              <img
-                src=""
-                alt="" id="icon"
-              />
-              <div>
-              <strong id="temperature"></strong><span class="units">°C | <a href="#">°F</a></span>
+              <div class="d-flex weather-temperature">
+                <img src="" alt="" id="icon" />
+                <div>
+                  <strong id="temperature"></strong
+                  ><span class="units">°C | <a href="#">°F</a></span>
+                </div>
               </div>
-            </div>
             </div>
           </div>
         </div>
