--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   >
                 </div>
               </div>
-              <div class="weather-forecast">
+              <div class="weather-forecast" id="forecast">
                 <ul>
                   <li>
                     <span class="weather-forecast-date">
